@@ -9,12 +9,6 @@ This is a list of additional addons/features.
 conda_recipes_dir
 =================
 
-directory in which conda recipes are located:
-useful if one wants one common conda_recipes folder for different conda installation:
-defaults to: `CONDA ROOT/conda_recipes`
-
-conda_recipes_dir: /home/0_CONDA_RELATED_0/conda-recipes
-
 USAGE: see `condarc_EXAMPLE file <condarc_EXAMPLE>`_
 
 .. code-block:: bash
@@ -24,6 +18,20 @@ USAGE: see `condarc_EXAMPLE file <condarc_EXAMPLE>`_
     # useful if one wants one common conda_recipes folder for 
     # different conda installation (defaults to: *CONDA ROOT/conda_recipes)
     conda_recipes_dir: /home/0_CONDA_RELATED_0/conda-recipes
+
+
+conda_repo_dir
+=================
+
+USAGE: see `condarc_EXAMPLE file <condarc_EXAMPLE>`_
+
+.. code-block:: bash
+
+    # CONDA_REPO_DIR:
+    # directory in which conda ready build packages are located: in the arch subfolders
+    # useful if one wants one common conda_repo folder for 
+    # different conda installation (defaults to: *CONDA ROOT/conda-bld)
+    conda_repo_dir: /home/0_CONDA_RELATED_0/conda-repo
 
 |
 |
