@@ -56,3 +56,8 @@ track_features: mkl
 # different conda installation (defaults to: *CONDA ROOT/conda_recipes)
 conda_recipes_dir: /home/0_CONDA_RELATED_0/conda-recipes
 
+# CONDA_REPO_DIR:
+# directory in which conda build packages are located: in the architecture subfolders
+# useful if one wants one common conda_repo folder for 
+# different conda installation (defaults to: *CONDA ROOT/conda-bld)
+conda_repo_dir: /home/0_CONDA_RELATED_0/conda-repo
